--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="header-content">
             <img src="Eco.png" alt="Logo" class="logo">
             <div class="header-text">
-                <h1>RESIRKULERINGS HJELPER</h1>
+                <h1>RESIRKULERINGS-HJELPER</h1>
                 <p>Her kan du få hjelp til å resirkulere riktig!</p>
             </div>
         </div>
@@ -192,7 +192,7 @@
                                 </div>
                             </div>
                             <div class="stat-info">
-                                <h3>Potensial</h3>
+                                <h3>CO₂ utslipp</h3>
                                 <p class="stat-description">CO₂ utslipp hvert år</p>
                             </div>
                         </div>
